--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 altair==3.2.0
-appnope==0.1.0
 attrs==19.1.0
 backcall==0.1.0
 bleach==3.1.0
@@ -21,7 +20,7 @@ jedi==0.14.1
 Jinja2==2.10.1
 json5==0.8.5
 jsonschema==3.0.2
-jupyter
+jupyter==1.0.0
 jupyter-client==5.3.1
 jupyter-console==6.0.0
 jupyter-core==4.5.0
@@ -52,7 +51,7 @@ reverse-geocode==1.4
 scipy==1.3.0
 Send2Trash==1.5.0
 six==1.12.0
-terminado==0.8.2
+terminado
 testpath==0.4.2
 tinydb==3.13.0
 toolz==0.10.0
