--- a/requirements.txt
+++ b/requirements.txt
@@ -1,68 +1,73 @@
-altair==3.2.0
-attrs==19.1.0
-backcall==0.1.0
-bleach==3.1.0
-branca==0.3.1
+altair==4.1.0
+attrs==19.3.0
+backcall==0.2.0
+bleach==3.1.5
+branca==0.4.1
 certifi
 chardet==3.0.4
-country-converter==0.6.6
-decorator==4.4.0
+country-converter==0.6.7
+decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
-future==0.17.1
-idna==2.8
-ipykernel==5.1.1
-ipyleaflet==0.11.1
-ipython==7.7.0
+future==0.18.2
+idna==2.10
+importlib-metadata==1.7.0
+ipykernel==5.3.3
+ipyleaflet==0.13.1
+ipython==7.16.1
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
-jedi==0.14.1
-Jinja2==2.10.1
-json5==0.8.5
-jsonschema==3.0.2
+jedi==0.17.2
+Jinja2==2.11.2
+json5==0.9.5
+jsonschema==3.2.0
 jupyter==1.0.0
-jupyter-client==5.3.1
-jupyter-console==6.0.0
-jupyter-core==4.5.0
-jupyterlab==1.0.4
-jupyterlab-server==1.0.0
+jupyter-client==6.1.6
+jupyter-console==6.1.0
+jupyter-core==4.6.3
+jupyterlab==2.2.0
+jupyterlab-server==1.2.0
 MarkupSafe==1.1.1
 mistune==0.8.4
-nbconvert==5.5.0
-nbformat==4.4.0
-notebook==6.0.0
-numpy==1.17.0
-pandas==0.25.0
+nbconvert==5.6.1
+nbformat==5.0.7
+notebook==6.0.3
+numpy==1.19.0
+packaging==20.4
+pandas==1.0.5
 pandocfilters==1.4.2
-parso==0.5.1
-pexpect==4.7.0
+parso==0.7.0
+pexpect==4.8.0
 pickleshare==0.7.5
-prometheus-client==0.7.1
-prompt-toolkit==2.0.9
+prometheus-client==0.8.0
+prompt-toolkit==2.0.10
 ptyprocess==0.6.0
-Pygments==2.4.2
-pyrsistent==0.15.4
-python-dateutil==2.8.0
-pytz==2019.2
-pyzmq==18.0.2
-qtconsole==4.5.2
-requests==2.22.0
-reverse-geocode==1.4
-scipy==1.3.0
+Pygments==2.6.1
+pyparsing==2.4.7
+pyrsistent==0.16.0
+python-dateutil==2.8.1
+pytz==2020.1
+pyzmq==19.0.1
+qtconsole==4.7.5
+QtPy==1.9.0
+requests==2.24.0
+reverse-geocode==1.4.1
+scipy==1.5.1
 Send2Trash==1.5.0
-six==1.12.0
+six==1.15.0
 terminado
-testpath==0.4.2
-tinydb==3.13.0
+testpath==0.4.4
+tinydb==4.1.1
 toolz==0.10.0
-tornado==6.0.3
-tqdm==4.32.2
-traitlets==4.3.2
+tornado==6.0.4
+tqdm==4.48.0
+traitlets==4.3.3
 traittypes==0.2.1
-urllib3==1.25.3
-vega==2.5.0
-vega-datasets==0.7.0
-wcwidth==0.1.7
+urllib3==1.25.9
+vega==3.4.0
+vega-datasets==0.8.0
+wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.5.1
-xarray==0.12.3
+xarray==0.16.0
+zipp==3.1.0
